Project hamaarag_combined {
  database_type: 'PostgreSQL'
  Note: 'Hamaarag integrated database schema combining taxonomy and monitoring'
}

// Enum Definitions
Enum dune_type_enum {
  "Shifting"
  "Semi-shifting"
}

Enum habitat_type_enum {
  "Basalt"
  "Limestone"
  "Slope"
  "Wadi"
}

Enum land_use_enum {
  "Bedouin Agriculture"
  "KKL Plantings"
  "Natural Loess"
}
Enum conservation_status_enum {
  "LC"
  "NE"
  "NT"
  "EN"
  "VU"
  "CR"
  "DD"
  "RE_AS_BREED"
  "RE"
  "EW"
  "EX"
}

Enum migration_enum {
  "resident"
  "long-range migrant"
  "short-range migrant"
  "nomadic"
}

Enum presence_enum {
  "vagrant"
  "winter visitor"
  "summer visitor"
  "resident"
  "passage migrant"
}

Enum landscape_enum {
  "wet habitat"
  "wide wadis"
  "rural landscape"
  "plains and valleys"
  "mountainous area"
  "cliffs"
  "rocks and stony ground"
  "urban space"
  "sand dunes"
}

Enum vegetation_formation_enum {
  "reedbed and sedges"
  "gardens and parks"
  "etsiya park forest"
  "forest"
  "Mediterranean maquis"
  "low shrubland"
  "herbaceous"
  "high shrubland"
  "plantations"
  "field crops"
}

Enum vegetation_density_enum {
  "high"
  "medium"
  "low"
}

Enum nest_enum {
  "trees"
  "bushes"
  "cliffs"
  "ground"
  "ruins"
  "dirt cliffs"
  "reedbed and sedges"
  "buildings"
}

Enum diet_enum {
  "omnivore"
  "herbivore"
  "piscivore"
  "invertebrates"
  "terrestrial vertebrates"
  "scavenger"
}

Enum foraging_ground_enum {
  "land"
  "trees and bushes"
  "air"
  "water"
}

Enum zoogeographic_zone_enum {
  "Mediterranean"
  "Irano-Turanian"
  "Sudanese"
  "Alpine"
  "Saharo-Arabian"
}

Enum change_type_enum {
  "split"
  "lump"
  "rename"
  "new"
  "deprecated"
}

Enum invasiveness_enum {
  "alien"
  "native"
}

// Taxonomy Tables
Table taxon_entity {
  taxon_entity_id uuid [pk]
  notes text
}

Table taxon_version {
  taxon_version_id uuid [pk]
  taxon_entity_id uuid [ref: > taxon_entity.taxon_entity_id, note: 'ON DELETE RESTRICT']
  version_year int [not null]
  species_code varchar(10) [not null]
  scientific_name text [not null]
  primary_com_name text [not null]
  hebrew_name text
  order_name text
  family_name text
  category text [not null]
  taxon_order int
  report_as UUID [ref: > taxon_version.taxon_version_id, note: 'ON DELETE SET NULL']
  is_current boolean [default: false]

  Indexes {
    (species_code, version_year) [unique]
  }
}

Table taxon_change_log {
  change_id int [pk, increment]
  from_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE RESTRICT']
  to_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE RESTRICT']
  change_type change_type_enum
  inherits_relations boolean [default: false]
  notes text
}

Table species_traits {
  taxon_version_id uuid [pk, ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  invasiveness invasiveness_enum
  synanthrope boolean
  breeding_il boolean
  associated_with_sampled_habitats boolean
  associated_with_sampled_habitats_comment text
  mass_g float
  reference text
}

Table gbif_taxon_link {
  taxon_version_id UUID [pk, ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  gbif_taxon_id INTEGER
  gbif_version_year INTEGER
}

Table conservation_status_lookup {
  conservation_code conservation_status_enum [pk]
  status_description text [not null, unique]
}

Table taxon_conservation_status {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  conservation_scheme text [not null]
  conservation_code conservation_status_enum [not null]
  primary key (taxon_version_id, conservation_scheme)
}

Table migration_type {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  migration_type migration_enum
  primary key (taxon_version_id, migration_type)
}

Table presence_il {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  presence_il presence_enum
  primary key (taxon_version_id, presence_il)
}

Table landscape_formation {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  landscape_formation landscape_enum
  primary key (taxon_version_id, landscape_formation)
}

Table vegetation_formation {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  vegetation_formation vegetation_formation_enum
  primary key (taxon_version_id, vegetation_formation)
}

Table vegetation_density {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  vegetation_density vegetation_density_enum
  primary key (taxon_version_id, vegetation_density)
}

Table foraging_ground {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  foraging_ground foraging_ground_enum
  primary key (taxon_version_id, foraging_ground)
}

Table zoogeographic_zone {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  zoogeographic_zone zoogeographic_zone_enum
  primary key (taxon_version_id, zoogeographic_zone)
}

Table nesting_ground {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  nesting_ground nest_enum
  primary key (taxon_version_id, nesting_ground)
}

Table diet_type {
  taxon_version_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE CASCADE']
  diet_type diet_enum
  primary key (taxon_version_id, diet_type)
}

// Monitoring Tables
Table monitoring_unit {
  unit_id uuid [pk]
  unit_name text [not null, unique]
  description text
}

Table monitoring_subunit {
  subunit_id uuid [pk]
  unit_id uuid [ref: > monitoring_unit.unit_id, note: 'ON DELETE RESTRICT']
  subunit_name text [not null]
  description text

  Indexes {
    (unit_id, subunit_name) [unique, name: 'unique_subunit_in_unit']
  }
}

Table monitoring_site {
  site_id uuid [pk]
  unit_id uuid [ref: > monitoring_unit.unit_id, note: 'ON DELETE RESTRICT']
  subunit_id uuid [ref: > monitoring_subunit.subunit_id, note: 'ON DELETE RESTRICT']
  site_name text [not null]
  description text

  Indexes {
    (subunit_id, site_name) [unique, name: 'unique_site_in_subunit']
    (unit_id, site_name) [unique, name: 'unique_site_in_unit_only']
  }
  
  Note: 'Sites can belong to units with or without subunits. The unique_site_in_unit_only constraint is deferrable initially deferred in SQL implementation.'
}

Table weather_description_lookup {
  weather_code text [pk]
  weather_description text [not null]
}

Table monitoring_point {
  point_id uuid [pk]
  site_id uuid [ref: > monitoring_site.site_id, note: 'ON DELETE RESTRICT']
  point_name text [not null]
  longitude numeric(9,6) [not null]
  latitude numeric(8,6) [not null]
  habitat_type habitat_type_enum
  agriculture text [note: 'Categorical field (e.g., "Near", "Far", NULL)']
  settlements text [note: 'Categorical field (e.g., "Near", "Far", NULL)']
  dunes dune_type_enum
  land_use land_use_enum
  notes text

  Indexes {
    (site_id, point_name) [unique, name: 'unique_point_in_site']
    (latitude, longitude) [unique, name: 'unique_coordinates']
  }
}

Table monitoring_campaign {
  campaign_id uuid [pk]
  campaign_code text [not null, unique]
  start_year integer [not null]
  end_year integer [not null]
  description text

  Note: 'Constraint: start_year <= end_year'
}

Table monitoring_event {
  event_id uuid [pk]
  campaign_id uuid [ref: > monitoring_campaign.campaign_id, note: 'ON DELETE RESTRICT']
  point_id uuid [ref: > monitoring_point.point_id, note: 'ON DELETE RESTRICT']
  event_date date [not null]
  start_time time
  weather_code text [ref: > weather_description_lookup.weather_code]
  temperature smallint [note: 'Using ordinal scale from protocol']
  wind smallint [note: 'Using ordinal scale from protocol']
  clouds smallint [note: 'Using ordinal scale from protocol']
  precipitation smallint [note: 'Using ordinal scale from protocol']
  disturbances text
  monitors_name text
  is_pilot boolean [default: false, note: 'Whether this is a pilot study event']
  notes text

  Indexes {
    (campaign_id, point_id, event_date) [unique, name: 'unique_event']
  }
}

Table species_observation {
  observation_id uuid [pk]
  event_id uuid [ref: > monitoring_event.event_id, note: 'ON DELETE RESTRICT']
  taxon_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE RESTRICT']
  first_five_mins boolean [note: 'TRUE if observation was in first five minutes, FALSE otherwise, NULL if unknown']
  radius_0_20 integer [default: 0]
  radius_20_100 integer [default: 0]
  radius_100_250 integer [default: 0]
  radius_over_250 integer [default: 0]
  count_under_250 integer [note: 'Generated column: radius_0_20 + radius_20_100 + radius_100_250', not null]
  is_interacting boolean [note: 'Whether bird was interacting with the sampling point (TRUE) or just flying over (FALSE)']
  notes text

  Note: 'Constraint: All radius values must be >= 0'
}

Table species_breeding_relationship {
  relationship_id uuid [pk]
  unit_id uuid [ref: > monitoring_unit.unit_id, note: 'ON DELETE RESTRICT']
  taxon_id uuid [ref: > taxon_version.taxon_version_id, note: 'ON DELETE RESTRICT']
  is_breeding boolean [not null]
  notes text

  Indexes {
    (unit_id, taxon_id) [unique, name: 'unique_breeding_relationship']
  }
}
